[gd_scene load_steps=13 format=3 uid="uid://cf4j0nfjaajbe"]

[ext_resource type="Script" uid="uid://b7r1ysmcak8vj" path="res://Scripts/map.gd" id="1_q0mm3"]
[ext_resource type="PackedScene" uid="uid://bo14mrvga8syw" path="res://Scenes/enemy_unit.tscn" id="2_np2xp"]
[ext_resource type="Script" uid="uid://dajw61vh5kchp" path="res://Scripts/ResourceScripts/unit_data.gd" id="3_olcgw"]
[ext_resource type="PackedScene" uid="uid://dcv8iwne8u7cf" path="res://Scenes/player_unit.tscn" id="3_w7jjh"]
[ext_resource type="PackedScene" uid="uid://bra4syws05jdo" path="res://Scenes/ground_grid.tscn" id="4_6q3n4"]
[ext_resource type="Resource" uid="uid://dulep71up18jy" path="res://Resources/ClassData/knight_data.tres" id="4_dlo4w"]
[ext_resource type="PackedScene" uid="uid://disl1khyc63rr" path="res://Scenes/highlight_layer.tscn" id="5_4c2oa"]
[ext_resource type="Resource" uid="uid://ckbg3nxtt1cky" path="res://Resources/ClassData/priest_data.tres" id="5_q6lx1"]
[ext_resource type="PackedScene" uid="uid://yvil7ohb0qf4" path="res://Scenes/action_menu.tscn" id="6_np2xp"]
[ext_resource type="PackedScene" uid="uid://dg028svcnu8gy" path="res://Scenes/end_screen.tscn" id="7_w7jjh"]
[ext_resource type="PackedScene" uid="uid://crxd46k35kbox" path="res://Scenes/unit_info_panel.tscn" id="11_dlo4w"]
[ext_resource type="PackedScene" uid="uid://rrtklejik3lk" path="res://Scenes/action_forecast.tscn" id="12_q6lx1"]

[node name="Map" type="Node2D" node_paths=PackedStringArray("GroundGrid", "HighlightLayer", "ManagerTimer", "ActionMenu", "EndScreen", "ActiveUnitInfoPanel", "ClickedUnitInfoPanel", "ActionForecast")]
script = ExtResource("1_q0mm3")
PlayerScene = ExtResource("3_w7jjh")
StartingPlayerClasses = Array[ExtResource("3_olcgw")]([ExtResource("4_dlo4w"), ExtResource("5_q6lx1")])
StartingPlayerPositions = Array[Vector2i]([Vector2i(2, 2), Vector2i(3, 3)])
GroundGrid = NodePath("GroundGrid")
HighlightLayer = NodePath("HighlightLayer")
ManagerTimer = NodePath("ManagerTimer")
ActionMenu = NodePath("ActionMenu")
EnemyScene = ExtResource("2_np2xp")
EndScreen = NodePath("EndScreen")
ActiveUnitInfoPanel = NodePath("UnitInfoPanel")
ClickedUnitInfoPanel = NodePath("UnitInfoPanel2")
ActionForecast = NodePath("ActionForecast")

[node name="PlayerUnit" parent="." instance=ExtResource("3_w7jjh")]

[node name="GroundGrid" parent="." instance=ExtResource("4_6q3n4")]

[node name="HighlightLayer" parent="." instance=ExtResource("5_4c2oa")]

[node name="ManagerTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ActionMenu" parent="." instance=ExtResource("6_np2xp")]
visible = false
z_index = 15

[node name="EndScreen" parent="." instance=ExtResource("7_w7jjh")]
process_mode = 3
visible = false

[node name="UnitInfoPanel" parent="." instance=ExtResource("11_dlo4w")]
visible = false
z_index = 10
offset_top = 132.0
offset_bottom = 192.0

[node name="UnitInfoPanel2" parent="." instance=ExtResource("11_dlo4w")]
visible = false
z_index = 10
offset_left = 286.0
offset_top = 132.0
offset_right = 320.0
offset_bottom = 192.0

[node name="ActionForecast" parent="." instance=ExtResource("12_q6lx1")]
visible = false

[connection signal="action_selected" from="ActionMenu" to="." method="_on_action_menu_action_selected"]
[connection signal="restart_requested" from="EndScreen" to="." method="_on_end_screen_restart_requested"]
